# desktop_overlay

./: .gitignore  README.md  build.sh  desktop_overlay.spec  pyproject.toml
amazing_mod/: amazing_mod.py
src/desktop_overlay/: __init__.py  definitions.py  main.py
src/desktop_overlay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/desktop_overlay/core/: base_mod.py  hotkey_manager.py  mod_manager.py  overlay_manager.py  settings_manager.py
src/desktop_overlay/mods/note_mod/: note_mod.py
src/desktop_overlay/mods/spotify_mod/: spotify_mod.py
src/desktop_overlay/mods/web_mod/: _web_ui.py  web_mod.py
src/desktop_overlay/mods/yt_music_mod/: yt_music_mod.py
src/desktop_overlay/ui/: core_overlay_ui.py  custom_mdi_window.py  mod_list_model.py  system_tray.py  themes.py
tests/: test_hotkey_manager.py  test_mod_manager.py  test_settings_manager.py
