[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop_overlay"
version = "0.1"
description = "Modular open-source overlay for your desktop"
requires-python = ">=3.8"
authors = [{ name = "Jan Kubów" }, { name = "Dawid Wyskwarski" }]

dependencies = ["PySide6", "pynput", "pystray", "pillow"]

[project.scripts]
desktop-overlay = "desktop_overlay.main:main"

[tool.setuptools.packages.find]
where = ["src"]
