[tool.poetry]
name = "desktop_overlay"
version = "0.1.0"
description = "Modular open-source overlay for your desktop"
authors = ["Jan Kubów", "Dawid Wyskwarski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PySide6 = "*"
pynput = "*"
pystray = "*"
pillow = "*"
pytest = "*"
spotipy = "*"
pyinstaller = "*"
dotenv = "*"

[tool.poetry.scripts]
desktop-overlay = "desktop_overlay.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
